# my-website

./: .env.example  .gitignore  PROMPT_FORMAT.md  README.md  WORKLOG.md  index.html  package.json  vercel.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
api/: search.js  suggest.js
css/: style.css
js/: api.js  gallery.js  main.js  modal.js  search.js  suggest.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
